[package]
name = "bulk_allocator"
version = "0.2.0"
authors = ["Yoshida Shin <wbcchsyn@gmail.com>"]
edition = "2018"

description = "Implementations for AllocRef. to pool allocated memory and to release them on the destruction."
repository = "https://github.com/wbcchsyn/rust-bulk-allocator"
license = "LGPL-3.0-or-later OR Apache-2.0"
readme = "README.md"

keywords = ["alloc", "allocator", "memory", "AllocRef"]

categories = ["memory-management"]

[dependencies]
