[package]
name = "bulk_allocator"
version = "0.5.2"
authors = ["Yoshida Shin <wbcchsyn@gmail.com>"]
edition = "2021"

description = "Implementations of GlobalAlloc holding memory cache."
repository = "https://github.com/wbcchsyn/rust-bulk-allocator"
license = "LGPL-3.0-or-later OR Apache-2.0"
readme = "README.md"

keywords = ["alloc", "allocator", "memory", "GlobalAlloc"]
documentation = "https://docs.rs/bulk_allocator/0.5.2/bulk_allocator/"

categories = ["memory-management"]

[badges]
travis-ci = { repository = "wbcchsyn/rust-bulk-allocator" }

[dependencies]

[dev-dependencies]
gharial = "0.3"
